# EDA-project1

./: Analyse data systémes éducatifs.ipynb  Analyse_Data_Educatif_System.ipynb  pyproject.toml
