[project]
name = "oc-eda-projet1"
version = "0.1.0"
description = "Exploration et analyse de données éducatives"
authors = [
    {repository = "https://github.com/Riddlerjoke/EDA-project1"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "anyio (>=4.8.0,<4.9.0)",
    "argon2-cffi (>=23.1.0,<23.2.0)",
    "argon2-cffi-bindings (>=21.2.0,<21.3.0)",
    "arrow (>=1.3.0,<1.4.0)",
    "asttokens (>=3.0.0,<3.1.0)",
    "async-lru (>=2.0.4,<2.1.0)",
    "attrs (>=24.3.0,<24.4.0)",
    "babel (>=2.16.0,<2.17.0)",
    "beautifulsoup4 (>=4.12.3,<4.13.0)",
    "bleach (>=6.2.0,<6.3.0)",
    "certifi (>=2024.12.14,<2024.13.0)",
    "cffi (>=1.17.1,<1.18.0)",
    "charset-normalizer (>=3.4.1,<3.5.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "comm (>=0.2.2,<0.3.0)",
    "contourpy (>=1.3.1,<1.4.0)",
    "cycler (>=0.12.1,<0.13.0)",
    "debugpy (>=1.8.11,<1.9.0)",
    "decorator (>=5.1.1,<5.2.0)",
    "defusedxml (>=0.7.1,<0.8.0)",
    "exceptiongroup (>=1.2.2,<1.3.0)",
    "executing (>=2.1.0,<2.2.0)",
    "fastjsonschema (>=2.21.1,<2.22.0)",
    "fonttools (>=4.55.3,<4.56.0)",
    "fqdn (>=1.5.1,<1.6.0)",
    "h11 (>=0.14.0,<0.15.0)",
    "httpcore (>=1.0.7,<1.1.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "idna (>=3.10,<4.0)",
    "ipykernel (>=6.29.5,<6.30.0)",
    "ipython (>=8.31.0,<8.32.0)",
    "ipywidgets (>=8.1.5,<8.2.0)",
    "isoduration (>=20.11.0,<20.12.0)",
    "jedi (>=0.19.2,<0.20.0)",
    "jinja2 (>=3.1.5,<3.2.0)",
    "joblib (>=1.4.2,<1.5.0)",
    "json5 (>=0.10.0,<0.11.0)",
    "jsonpointer (>=3.0.0,<3.1.0)",
    "jsonschema (>=4.23.0,<4.24.0)",
    "jsonschema-specifications (>=2024.10.1,<2024.11.0)",
    "jupyter (>=1.1.1,<1.2.0)",
    "jupyter-client (>=8.6.3,<8.7.0)",
    "jupyter-console (>=6.6.3,<6.7.0)",
    "jupyter-core (>=5.7.2,<5.8.0)",
    "jupyter-events (>=0.11.0,<0.12.0)",
    "jupyter-lsp (>=2.2.5,<2.3.0)",
    "jupyter-server (>=2.15.0,<2.16.0)",
    "jupyter-server-terminals (>=0.5.3,<0.6.0)",
    "jupyterlab (>=4.3.4,<4.4.0)",
    "jupyterlab-pygments (>=0.3.0,<0.4.0)",
    "jupyterlab-server (>=2.27.3,<2.28.0)",
    "jupyterlab-widgets (>=3.0.13,<3.1.0)",
    "kiwisolver (>=1.4.8,<1.5.0)",
    "markupsafe (>=3.0.2,<3.1.0)",
    "matplotlib (>=3.10.0,<3.11.0)",
    "matplotlib-inline (>=0.1.7,<0.2.0)",
    "mistune (>=3.1.0,<3.2.0)",
    "nbclient (>=0.10.2,<0.11.0)",
    "nbconvert (>=7.16.5,<7.17.0)",
    "nbformat (>=5.10.4,<5.11.0)",
    "nest-asyncio (>=1.6.0,<1.7.0)",
    "notebook (>=7.3.2,<7.4.0)",
    "notebook-shim (>=0.2.4,<0.3.0)",
    "numpy (>=2.2.1,<2.3.0)",
    "overrides (>=7.7.0,<7.8.0)",
    "packaging (>=24.2,<25.0)",
    "pandas (>=2.2.3,<2.3.0)",
    "pandocfilters (>=1.5.1,<1.6.0)",
    "parso (>=0.8.4,<0.9.0)",
    "pillow (>=11.1.0,<11.2.0)",
    "pip (>=23.2.1,<23.3.0)",
    "platformdirs (>=4.3.6,<4.4.0)",
    "prometheus-client (>=0.21.1,<0.22.0)",
    "prompt-toolkit (>=3.0.48,<3.1.0)",
    "psutil (>=6.1.1,<6.2.0)",
    "pure-eval (>=0.2.3,<0.3.0)",
    "pycparser (>=2.22,<3.0)",
    "pygments (>=2.19.1,<2.20.0)",
    "pyparsing (>=3.2.1,<3.3.0)",
    "python-dateutil (>=2.9.0.post0,<2.10.0)",
    "python-json-logger (>=3.2.1,<3.3.0)",
    "pytz (>=2024.2,<2025.0)",
    "pywin32 (>=308,<308.1)",
    "pywinpty (>=2.0.14,<2.1.0)",
    "pyyaml (>=6.0.2,<6.1.0)",
    "pyzmq (>=26.2.0,<26.3.0)",
    "referencing (>=0.35.1,<0.36.0)",
    "requests (>=2.32.3,<2.33.0)",
    "rfc3339-validator (>=0.1.4,<0.2.0)",
    "rfc3986-validator (>=0.1.1,<0.2.0)",
    "rpds-py (>=0.22.3,<0.23.0)",
    "scikit-learn (>=1.6.1,<1.7.0)",
    "scipy (>=1.15.1,<1.16.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "send2trash (>=1.8.3,<1.9.0)",
    "setuptools (>=68.2.0,<68.3.0)",
    "six (>=1.17.0,<1.18.0)",
    "sniffio (>=1.3.1,<1.4.0)",
    "soupsieve (>=2.6,<3.0)",
    "stack-data (>=0.6.3,<0.7.0)",
    "terminado (>=0.18.1,<0.19.0)",
    "threadpoolctl (>=3.5.0,<3.6.0)",
    "tinycss2 (>=1.4.0,<1.5.0)",
    "tomli (>=2.2.1,<2.3.0)",
    "tornado (>=6.4.2,<6.5.0)",
    "traitlets (>=5.14.3,<5.15.0)",
    "types-python-dateutil (>=2.9.0.20241206,<2.10.0.0)",
    "typing-extensions (>=4.12.2,<4.13.0)",
    "tzdata (>=2024.2,<2025.0)",
    "uri-template (>=1.3.0,<1.4.0)",
    "urllib3 (>=2.3.0,<2.4.0)",
    "wcwidth (>=0.2.13,<0.3.0)",
    "webcolors (>=24.11.1,<24.12.0)",
    "webencodings (>=0.5.1,<0.6.0)",
    "websocket-client (>=1.8.0,<1.9.0)",
    "wheel (>=0.41.2,<0.42.0)",
    "widgetsnbextension (>=4.0.13,<4.1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
